Bug 84554 - List view column misaligned in mail app
Align selection checkboxes in "Reading pane on right" view.

(From Lars P. Thomsen.)

http://bugzilla.zimbra.com/show_bug.cgi?id=84554

Copied from Perforce
 Change: 488568

--- a/WebRoot/css/dwt.css
+++ b/WebRoot/css/dwt.css
@@ -551,7 +551,7 @@ TD.DwtListView-ColumnActive {
 }
 
 /* ??? SHOTGUN */
-.DwtListView-Rows TD, .ZmRowDoubleHeader, .ZmRowDoubleHeader DIV, .DwtMsgListMultiCol DIV {
+.DwtListView-Rows TD, .ZmRowDoubleHeader, .DwtMsgListMultiCol DIV {
 	padding-left:@TextPaddingSize@;
 	padding-right:2px;
 	overflow:hidden;
